// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom render 1`] = `
<button
  type="button"
>
  Custom
</button>
`;

exports[`default render 1`] = `
<button
  class="example-block-class-day"
  type="button"
  value="2015-05-05"
>
  5
</button>
`;
